refactor: change groups handler file - feat: more swagger - deps: update dependencies and tidy up
