# api/v1/handler/groups/groups.go
@@ -14,66 +14,6 @@ import (
 	model "github.com/coolray-dev/raydash/models"
 )
 
-// Index handle GET /groups which simply list out all groups
-func Index(c *gin.Context) {
-	var groups []model.Group
-	if err := orm.DB.Find(&groups).Order("updated_at desc").Error; err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	c.JSON(http.StatusOK, gin.H{
-		"total":  len(groups),
-		"groups": groups,
-	})
-}
-
-// Show receive a id from request url and return the group of the specific id
-func Show(c *gin.Context) {
-	gid, err := parseGID(c)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	var group model.Group
-	group.ID = gid
-
-	if err := orm.DB.First(&group).Error; errors.Is(err, gorm.ErrRecordNotFound) {
-		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
-		return
-	} else if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	c.JSON(http.StatusOK, gin.H{
-		"group": group,
-	})
-	return
-}
-
-// Create receive a group object from request and update the specific record in DB
-func Create(c *gin.Context) {
-	var group model.Group
-	if err := c.ShouldBindJSON(&group); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-
-	if err := orm.DB.Save(&group).Error; err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-	// Deal With Access Control
-	casbin.Enforcer.AddPolicy("group::"+group.Name, "/*/groups/"+strconv.Itoa(int(group.ID))+"*", "*")
-	c.JSON(http.StatusOK, gin.H{
-		"group": group,
-	})
-	return
-}
-
 // Update receive a id and a group object from request and update the specific record in DB
 func Update(c *gin.Context) {
 	gid, err := parseGID(c)
